package com.bradburp.restaurant.Kitchen.burgers;

public interface Burger {

    public abstract void prepare();

}
