@startuml
note as Description
        BurgerClient beefBurger = new BeefBurgerFactory();
        beefBurger.orderBurger();

        BurgerClient veggieBurger = new VeggieBurgerFactory();
        veggieBurger.orderBurger();
end note

abstract BurgerClient {
    +orderBurger() : void
    +{abstract} createBurger() : Burger
}

BurgerClient <|-- BeefBurgerFactory
class BeefBurgerFactory {
    +createBurger() : Burger
}

BurgerClient <|-- VeggieBurgerFactory
class VeggieBurgerFactory {
    +createBurger() : Burger
}

BurgerClient -> Burger
interface Burger {
    +void prepare()
}

Burger <|... BeefBurger
class BeefBurger {
    +void prepare()
}

Burger <|... VeggieBurger
class VeggieBurger {
    +void prepare()
}
@enduml